<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mine">我的</string>
    <string name="mine_unlogon">未登录</string>
    <string name="mine_personal_info">个人资料</string>
    <string name="mine_security">账号安全</string>
    <string name="mine_identity_or_organ_auth">身份认证/机构认证</string>
    <string name="mine_identity_auth">人个身份认证/企业认证</string>
    <string name="mine_about">关于押品管家</string>
    <string name="mine_change_password">修改密码</string>
    <string name="mine_change_security_info">修改安全问题及答案</string>
    <string name="mine_forgot_password">密码找回</string>
    <string name="mine_input_please">请输入</string>
    <string name="mine_completed">完成</string>
    <string name="mine_version">版本号: %1$s</string>
    <string name="mine_next">下一步</string>
    <string name="mine_real_name">真实姓名</string>
    <string name="mine_identity_num">身份证号码</string>
    <string name="mine_address">家庭住址</string>
    <string name="mine_company_full_name">单位全称</string>
    <string name="mine_identity_type">身份类别</string>
    <string name="mine_social_code">统一社会信用代码</string>
    <string name="mine_role">角色</string>
    <string name="mine_job_position">工作职务</string>
    <string name="mine_monitor_organ_social_code">监管机构统一社会信用代码</string>
    <string name="mine_monitor_organ">监管机构</string>
    <string name="mine_submit">提交</string>
    <string name="mine_organ_name">机构名称</string>
    <string name="mine_organ_address">机构地址</string>
    <string name="mine_company_presenter">法人代表</string>
    <string name="mine_registered_capital">注册资本</string>
    <string name="mine_date_of_found">成立日期</string>
    <string name="mine_operating_period">营业期限</string>
    <string name="mine_business_scope">经营范围</string>
    <string name="mine_organ_administrator">机构管理员</string>
    <string name="mine_apply_parent_institution">申请父机构</string>
    <string name="mine_menu_apply_sheets">申请单</string>
    <string name="mine_menu_notification">通知</string>
    <string name="mine_menu_sub_institutions">下级机构</string>
    <string name="mine_menu_institution_user">机构用户</string>
    <string name="mine_menu_access_transfer">权限转移</string>
    <string name="mine_menu_apply_attached_institution">申请挂靠机构</string>
    <string name="mine_menu_auth_account">认证账户</string>


    <string name="mine_notification_read">已读</string>
    <string name="mine_notification_unread">未读</string>
    <string name="mine_applicant">申请人: %1$s</string>
    <string name="mine_organ_administrator_phone">管理员手机号</string>
    <string name="mine_phone_number">手机号码</string>
    <string name="mine_reject">驳回</string>
    <string name="mine_approve">通过</string>
    <string name="mine_search_result_title">搜索到%1$d个结果</string>
    <string name="mine_empty_symbol">-</string>
    <string name="mine_company_register_type">机构注册类型</string>
    <string name="mine_business_hint">请输入经营范围,最多可输入300个字符</string>


    <string-array name="mine_auth_way">
        <item name="ordinary">普通用户认证</item>
        <item name="individual">质权人独立用户认证</item>
        <item name="organ">注册机构认证</item>
    </string-array>
</resources>