<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.leevinapp.monitor.mine.ui.identityauth.IdentityAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_monitor_background_heavy">

        <include
            android:id="@+id/toolbar_container"
            layout="@layout/toolbar_binding" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:paddingTop="@dimen/dimen_common_margin"
            android:background="@drawable/content_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_container">


            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_real_name"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:name="@string/mine_real_name"
                app:isEditable="false"
                app:editHint=""
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"/>

            <com.leevinapp.monitor.core.common.view.ItemView
                android:id="@+id/iv_identity_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:value=""
                app:layout_constraintTop_toBottomOf="@+id/iev_real_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:label="@string/mine_identity_type"/>

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_identity_num"
                android:layout_width="match_parent"
                app:name="@string/mine_identity_num"
                app:isEditable="false"
                app:editHint=""
                app:layout_constraintTop_toBottomOf="@+id/iv_identity_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_address"
                android:layout_width="match_parent"
                app:name="@string/mine_address"
                app:isEditable="false"
                app:editHint=""
                app:layout_constraintTop_toBottomOf="@+id/iev_identity_num"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_company_full_name"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:name="@string/mine_company_full_name"
                app:isEditable="false"
                app:editHint=""
                app:layout_constraintTop_toBottomOf="@+id/iev_address"
                android:layout_height="wrap_content"/>

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_uniform_social_code"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:name="@string/mine_social_code"
                app:isEditable="false"
                app:editHint=""
                app:layout_constraintTop_toBottomOf="@+id/iev_company_full_name"
                android:layout_height="wrap_content"/>

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_job_position"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:name="@string/mine_job_position"
                app:isEditable="false"
                app:editHint=""
                app:layout_constraintTop_toBottomOf="@+id/iev_uniform_social_code"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_submit"
                style="@style/MonitorButton.Blue"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/mine_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>