<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userManager"
            type="com.leevinapp.monitor.core.core.user.UserManager" />

        <variable
            name="viewModel"
            type="com.leevinapp.monitor.mine.ui.identityauth.IdentityAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_monitor_heavy_blue">

        <include
            android:id="@+id/toolbar_container"
            layout="@layout/toolbar_binding" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:background="@drawable/content_background"
            android:paddingHorizontal="@dimen/dimen_common_margin"
            android:paddingTop="@dimen/dimen_common_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/content_background"
                android:paddingBottom="40dp">

                <com.leevinapp.monitor.core.common.view.ItemView
                    android:id="@+id/iv_identity_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:label="@string/mine_identity_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:value="@={viewModel.userRoleDes}" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_organ_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editValue="@={viewModel.supervisorOrgan}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_identity_type"
                    app:name="@string/mine_organ_name" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_uniform_social_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editValue="@={viewModel.supervisorSocialCode}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_organ_name"
                    app:name="@string/mine_social_code" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_organ_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editValue="@={viewModel.organAddress}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_uniform_social_code"
                    app:name="@string/mine_organ_address" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_company_presenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editValue="@={viewModel.organRepresentative}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_organ_address"
                    app:name="@string/mine_company_presenter" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_registered_capital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editValue="@={viewModel.registeredCapital}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_company_presenter"
                    app:name="@string/mine_registered_capital" />

                <com.leevinapp.monitor.core.common.view.ItemView
                    android:id="@+id/iev_date_of_found"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_registered_capital"
                    app:label="@string/mine_date_of_found"
                    app:hasArrow="true"
                    app:value="@={viewModel.dateOfFounded}" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_business_period"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editValue="@={viewModel.businessPeriod}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_date_of_found"
                    app:name="@string/mine_operating_period" />

                <TextView
                    android:id="@+id/tv_business_scope_title"
                    style="@style/MonitorText.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/iev_business_period"
                    app:layout_constraintTop_toBottomOf="@+id/iev_business_period"
                    android:paddingVertical="@dimen/dimen_common_margin_1"
                    android:text="@string/mine_business_scope" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_business_scope"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:counterEnabled="true"
                    app:counterMaxLength="300"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_business_scope_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_business_scope"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请输入"
                        android:text="@={viewModel.businessScope}"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_organ_administrator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editHint=""
                    app:editValue="@{userManager.user.fullName}"
                    app:isEditable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_business_scope"
                    app:name="@string/mine_organ_administrator" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_job_position"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:editHint=""
                    app:editValue="@{userManager.user.jobPosition}"
                    app:isEditable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_organ_administrator"
                    app:name="@string/mine_job_position" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_submit"
                    style="@style/MonitorButton.Blue"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/mine_submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iev_job_position" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>