<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.leevinapp.monitor.mine.domain.model.InstitutionUserModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/content_background_all_round"
        android:paddingHorizontal="@dimen/dimen_common_margin"
        android:paddingVertical="@dimen/dimen_common_margin">

        <TextView
            android:id="@+id/tv_title_name"
            style="@style/MonitorText.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@{model.userModel.fullName}"
            android:textColor="#424242"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="王小华" />

        <TextView
            android:id="@+id/tv_sub_title"
            style="@style/MonitorText.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_common_margin"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:paddingVertical="10dp"
            android:text="@{model.userModel.jobPosition}"
            android:textColor="#424242"
            app:layout_constraintStart_toEndOf="@+id/tv_title_name"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_name"
            tools:text="财务专员" />

        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@{model.expand?@drawable/ic_arrow_down:@drawable/ic_arrow_right}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sub_title"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_arrow_right"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/container_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_name"
            app:visible="@{model.expand}"
            tools:visibility="visible">

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editValue="@{model.userModel.role.desc}"
                app:isEditable="false"
                app:name="@string/mine_role" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_identity_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editValue="@{model.userModel.residenceId}"
                app:isEditable="false"
                app:name="@string/mine_identity_num" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editValue="@{model.userModel.homeAddress}"
                app:isEditable="false"
                app:name="@string/mine_address" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:editValue="@{model.userModel.phoneNumber}"
                app:isEditable="false"
                app:name="@string/mine_phone_number" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>